--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,11 @@
 [[constraint]]
   name = "github.com/gin-gonic/gin"
   version = "1.3.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/bet365/jingo"
+
+[[constraint]]
+  name = "github.com/PuerkitoBio/goquery"
+  version = "1.5.0"
